fixed layout issue with floated elements

--- a/sass/content/content.scss
+++ b/sass/content/content.scss
@@ -62,6 +62,13 @@
 	@include font-size(16);
 }
 
+.entry-content::before,
+.entry-content::after {
+	display: table;
+	content: "";
+	clear: both;
+}
+
 .entry-content > .alignwide,
 .entry-content > .alignfull {
 	margin-left: calc(-100vw / 2 + 100% / 2);
